src/st/st-drawing-area.h
@@ -2,7 +2,8 @@
 #ifndef __ST_DRAWING_AREA_H__
 #define __ST_DRAWING_AREA_H__
 
-#include "st-bin.h"
+#include "st-widget.h"
+#include <cairo.h>
 
 #define ST_TYPE_DRAWING_AREA                 (st_drawing_area_get_type ())
 #define ST_DRAWING_AREA(obj)                 (G_TYPE_CHECK_INSTANCE_CAST ((obj), ST_TYPE_DRAWING_AREA, StDrawingArea))
@@ -18,22 +19,24 @@ typedef struct _StDrawingAreaPrivate StDrawingAreaPrivate;
 
 struct _StDrawingArea
 {
-    StBin parent;
+    StWidget parent;
 
     StDrawingAreaPrivate *priv;
 };
 
 struct _StDrawingAreaClass
 {
-    StBinClass parent_class;
+    StWidgetClass parent_class;
 
-    void (*redraw) (StDrawingArea *area, ClutterCairoTexture *texture);
+    void (*repaint) (StDrawingArea *area);
 };
 
 GType st_drawing_area_get_type (void) G_GNUC_CONST;
 
-ClutterCairoTexture *st_drawing_area_get_texture (StDrawingArea *area);
-
-void st_drawing_area_emit_redraw (StDrawingArea *area);
+void     st_drawing_area_queue_repaint    (StDrawingArea *area);
+cairo_t *st_drawing_area_get_context      (StDrawingArea *area);
+void     st_drawing_area_get_surface_size (StDrawingArea *area,
+                                           guint         *width,
+                                           guint         *height);
 
 #endif /* __ST_DRAWING_AREA_H__ */
